<resources>
    <string name="app_name">RandomUser</string>
    <string name="user_gender">Gender</string>
    <string name="user_email">Email</string>
    <string name="user_location">Location</string>
    <string name="user_registered">Registered</string>
    <string name="user_picture_description">user picture description</string>
    <string name="users_list_empty">Sorry no random users for now :(</string>
</resources>
